# tesis-rag-f1

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: streamlit_app.py
benchmarks/: hybrid_benchmark_cases.json
docs/: README.md  benchmark_evaluation.md  f1_chunk_examples.md  hybrid_pipeline.md  indexing_metadata.md  minimal_pipeline_examples.md  nl2sql_generation.md  postgres_loading.md  sql_query_execution.md
scripts/: README.md  load_postgres.py  run_benchmark.py  run_minimal_pipeline.py
src/f1_rag/: __init__.py  config.py
src/f1_rag/data/: __init__.py  cli.py  loader.py  pipeline.py  preparation.py  serialization.py
src/f1_rag/database/: __init__.py  cli.py  connection.py  example_query.py  load_pipeline.py  query_executor.py  schema.py  schema.sql  sql_validator.py
src/f1_rag/embeddings/: __init__.py  openai_embedder.py
src/f1_rag/evaluation/: __init__.py  benchmark.py  cli.py
src/f1_rag/generation/: __init__.py  final_response.py
src/f1_rag/nl2sql/: __init__.py  entity_resolver.py  example_usage.py  intent_router.py  prompt_builder.py  schema_context.py  sql_generator.py
src/f1_rag/orchestration/: __init__.py  example_usage.py  hybrid_pipeline.py
src/f1_rag/retrieval/: __init__.py  chroma_indexer.py  cli.py  example_usage.py  indexing_pipeline.py  retriever.py
src/f1_rag/ui/: __init__.py  reporting.py
tests/: test_sql_validator.py
