[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-rag-f1"
version = "0.1.0"
description = "Scaffolding for a thesis project on RAG over structured Formula 1 data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.45.0",
    "openai>=1.30.0",
    "chromadb==0.5.5",
    "psycopg[binary]>=3.2.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
